--- a/RankTest/viewControllers/picturesCollection/RNKPictureCollectionViewCell.xib
+++ b/RankTest/viewControllers/picturesCollection/RNKPictureCollectionViewCell.xib
@@ -6,14 +6,33 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PictureCell" id="gTV-IL-0wX" customClass="RNKPictureCollectionViewCell">
             <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xmu-dU-370">
+                        <rect key="frame" x="8" y="39" width="84" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="FHu-va-63x"/>
+                            <constraint firstAttribute="width" constant="84" id="eJV-P7-lxi"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
             <color key="backgroundColor" red="0.0" green="1" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+            <constraints>
+                <constraint firstAttribute="centerY" secondItem="xmu-dU-370" secondAttribute="centerY" id="PVF-oL-Mgs"/>
+                <constraint firstAttribute="centerX" secondItem="xmu-dU-370" secondAttribute="centerX" id="PYH-M1-Z37"/>
+            </constraints>
+            <connections>
+                <outlet property="label" destination="xmu-dU-370" id="O2v-WS-qAa"/>
+            </connections>
         </collectionViewCell>
     </objects>
 </document>
