--- a/RankTest/viewControllers/picturesCollection/RNKPicturesCollectionVC.xib
+++ b/RankTest/viewControllers/picturesCollection/RNKPicturesCollectionVC.xib
@@ -6,6 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RNKPicturesCollectionVC">
             <connections>
+                <outlet property="collectionView" destination="i5M-Pr-FkT" id="Ol3-yY-4W7"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
